# fastarchx

./: .gitignore  README.md  pyproject.toml
fast_arch/: cli.py
fast_arch/architectures/: arch.json
fast_arch/generator/: gen.py
fast_arch/prompts/: prompts.py
fast_arch/schema/: arch_schema.py
fast_arch/utils/: fs.py  json_reader.py
fastarchx/: cli.py
fastarchx/architectures/: Clean.md  Hexagonal.md  Layered.md  MVC.md  Modular Monolith.md
fastarchx/core/: config.py
fastarchx/generator/: gen.py
fastarchx/prompts/: prompts.py
fastarchx/utils/: fs.py  json_reader.py
