[project]
name = "fast-arch"
version = "0.1.0"
description = "Tool for generating fastapi project structure."
authors = [{ name="Ahmed Bakr" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["questionary", "pydantic"]

[project.scripts]
fast-arch = "fast_arch.cli:main"

[tool.setuptools.package-data]
fast_arch = ["architectures/*.json"]