[project]
name = "fastarchx"
version = "0.1.2"
description = "Tool for generating fastapi project structure."
authors = [{ name="Ahmed Bakr" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["questionary", "pydantic"]

[project.scripts]
fastarchx = "fastarchx.cli:main"

[tool.setuptools.package-data]
fastarchx = ["architectures/*.json", "architectures/*.md"]